# mobile-wasm

./: .gitignore  BUG_ANALYSIS_REPORT.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  bug-fixer.agent.md  build.gradle.kts  build_info.txt  build_info_v2.txt  build_output.txt  code-quality.agent.md  git_diff.txt  git_log.txt  git_status.txt  gradle.properties  java_check.txt  java_real_path.txt  jvm_detailed.txt  package-lock.json  settings.gradle.kts  view.xml
.github/agents/: bug-hunter.agent.md  repo-maintenance.agent.md  security-auditor.agent.md
.github/workflows/: bump-version.yml  release.yml
.ort/: analyzer-result.json
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: chess.wasm  chess.wat
app/src/main/cpp/: CMakeLists.txt  chess_engine.c  wasmedge_jni.cpp
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  fragment_chess.xml  fragment_home.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
assets/: chess.wasm
pwa/: app.js  build_ls.txt  index.html  manifest.json  service-worker.js  styles.css
pwa/demo/: echo.wat
pwa/demo/examples/: PUBLIC_RELEASES.md  README.md  echo_wrapped.wat  fixed_error.wat  fixed_ok.wat
pwa/demo/examples/advanced/: README.md  fnv_report.wat  math_divide.wat  math_double.wat  math_double_README.md  math_multiply.wat  math_subtract.wat  math_sum.wat
scripts/: bump_version.sh
(+13 files in other folders)
